# bounding_boxes_to_world_coordinates

./: .gitignore  README.md
bounding_boxes_to_world_coordinates_implementation/: CMakeLists.txt  package.xml
bounding_boxes_to_world_coordinates_implementation/include/: node_template.h
bounding_boxes_to_world_coordinates_implementation/src/: bounding_box_publisher_node.cpp  bounding_boxes_to_world_coordinates_node.cpp
bounding_boxes_to_world_coordinates_msgs/: CMakeLists.txt  package.xml
bounding_boxes_to_world_coordinates_msgs/msg/: bounding_box.msg  bounding_box_collection.msg
